cabal-version: 3.0
name: postgresql-types-core
version: 0
category: PostgreSQL, Codecs
synopsis: Type-safe PostgreSQL types with lawful conversions and wire protocol codecs
description:
  Haskell representation of PostgreSQL data types with mappings to and from both
  binary and textual formats of the PostgreSQL wire protocol.

  This library is about precision. It aims to reproduce the PostgreSQL type system as closely as possible.

  Types are represented with hidden constructors, ensuring only valid PostgreSQL
  values can be constructed. Conversions use the lawful-conversions library for
  safe, well-defined transformations. Exhaustively tested against PostgreSQL 9-17
  with property-based testing covering the complete range of valid PostgreSQL values.

  The library can be used as the basis for various PostgreSQL libraries.

homepage: https://github.com/nikita-volkov/postgresql-types-core
bug-reports: https://github.com/nikita-volkov/postgresql-types-core/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/postgresql-types-core

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    PostgresqlTypes.Algebra

  other-modules:
    PostgresqlTypes.Algebra.Prelude

  build-depends:
    QuickCheck >=2.14 && <3,
    attoparsec >=0.14 && <0.19,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    invariant ^>=0.6.4,
    mtl >=2.2 && <3,
    profunctors ^>=5.6 && <6,
    ptr-peeker ^>=0.1,
    ptr-poker ^>=0.1.2.16,
    tagged ^>=0.8.9,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.4,
    time >=1.12 && <2,
    transformers >=0.5 && <0.7,
    uuid >=1.3 && <2,
    vector ^>=0.13,
